# minimal_terminal_music_player

./: .gitignore  CMakeLists.txt  README.md
include/: player.h  trackList.h
src/: main.cpp  player.cpp  trackList.cpp
